--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.0.1",
-    "cheerio": "^1.0.0-rc.2",
     "dotenv-safe": "^4.0.4",
+    "jsdom": "^23.0.1",
     "node-fetch": "^1.7.1",
     "spotify-web-api-node": "^2.4.0"
   },
@@ -22,6 +22,7 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-import": "^2.7.0",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "prettier": "^3.1.1"
   }
 }
